integração do ml com o front

--- a/Modulo1_Projeto/src/main/resources/view/main-view.fxml
+++ b/Modulo1_Projeto/src/main/resources/view/main-view.fxml
@@ -5,7 +5,7 @@
 
 <VBox spacing="15" alignment="CENTER" xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.safescore.view.MainController"
+      fx:controller="com.safescore.controller.MainController"
       stylesheets="@style.css">
 
     <!-- Título "SafeScore" -->
