--- a/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
+++ b/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
@@ -19,7 +19,7 @@
                 <!-- Credit Score Pane -->
                 <Pane layoutX="360.0" layoutY="8.0" prefHeight="383.0" prefWidth="272.0" style="-fx-background-color: #3c5191; -fx-background-radius: 4%;">
                     <children>
-                        <Label layoutX="30.0" layoutY="55.0" prefHeight="153.0" prefWidth="214.0" style="-fx-background-color: #449432; -fx-background-radius: 4%; -fx-text-alignment: center; -fx-alignment: center;" text="681" textFill="WHITE">
+                        <Label id="usuarioScore" layoutX="30.0" layoutY="55.0" prefHeight="153.0" prefWidth="214.0" style="-fx-background-color: #449432; -fx-background-radius: 4%; -fx-text-alignment: center; -fx-alignment: center;" text="681" textFill="WHITE">
                             <font>
                                 <Font name="System Bold" size="101.0" />
                             </font>
@@ -29,23 +29,23 @@
                         <Font name="System Bold" size="28.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="40.0" fitWidth="34.0" layoutX="185.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="183.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../Pictures/sparkles-emoji-512x497-bp4lzdxt.png" />
+                        <Image url="@../img/sparkles.256x230.png" />
                      </image>
                   </ImageView>
                     </children>
                 </Pane>
 
                 <!-- Logo -->
-                <ImageView fitHeight="70.0" fitWidth="107.0" layoutX="34.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="227.0" fitWidth="223.0" layoutX="-6.0" layoutY="-63.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../../../../../Pictures/Logo_do_Agibank.svg.png" />
+                        <Image url="@../img/SafeScore-Logo.png" />
                     </image>
                 </ImageView>
 
                 <!-- Personal Info Labels -->
-                <Label layoutX="27.0" layoutY="109.0" text="Marcia Teresinha" textFill="#313131">
+                <Label id="usuarioNome" layoutX="27.0" layoutY="109.0" text="Marcia Teresinha" textFill="#313131">
                     <font>
                         <Font name="System Bold" size="35.0" />
                     </font>
@@ -55,7 +55,7 @@
                     <padding>
                         <Insets bottom="10" left="10" right="10" top="10" />
                     </padding>
-                    <TableView fx:id="verificacoesTable" prefHeight="227.0" prefWidth="310.0">
+                    <TableView id="dadosTabela" fx:id="verificacoesTable" prefHeight="227.0" prefWidth="310.0">
                         <columnResizePolicy>
                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                         </columnResizePolicy>
