--- a/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
+++ b/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.safescore.controller.ProfileScoreController">
     <children>
         <AnchorPane prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
@@ -19,21 +19,21 @@
                 <!-- Credit Score Pane -->
                 <Pane layoutX="360.0" layoutY="8.0" prefHeight="383.0" prefWidth="272.0" style="-fx-background-color: #3c5191; -fx-background-radius: 4%;">
                     <children>
-                        <Label id="usuarioScore" layoutX="30.0" layoutY="55.0" prefHeight="153.0" prefWidth="214.0" style="-fx-background-color: #449432; -fx-background-radius: 4%; -fx-text-alignment: center; -fx-alignment: center;" text="681" textFill="WHITE">
+                        <Label fx:id="usuarioScore" layoutX="22.0" layoutY="55.0" prefHeight="140.0" prefWidth="231.0" style="-fx-background-color: #449432; -fx-background-radius: 4%; -fx-text-alignment: center; -fx-alignment: center;" text="681" textFill="WHITE">
                             <font>
-                                <Font name="System Bold" size="101.0" />
+                                <Font name="System Bold" size="82.0" />
                             </font>
                         </Label>
-                  <Label layoutX="13.0" layoutY="6.0" prefHeight="40.0" prefWidth="247.0" text="SafeScore.AI" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="28.0" />
-                     </font>
-                  </Label>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="183.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/sparkles.256x230.png" />
-                     </image>
-                  </ImageView>
+                        <Label layoutX="13.0" layoutY="6.0" prefHeight="40.0" prefWidth="247.0" text="SafeScore.AI" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="28.0" />
+                            </font>
+                        </Label>
+                        <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="183.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../img/sparkles.256x230.png" />
+                            </image>
+                        </ImageView>
                     </children>
                 </Pane>
 
@@ -45,7 +45,7 @@
                 </ImageView>
 
                 <!-- Personal Info Labels -->
-                <Label id="usuarioNome" layoutX="27.0" layoutY="109.0" text="Marcia Teresinha" textFill="#313131">
+                <Label fx:id="usuarioNome" layoutX="27.0" layoutY="109.0" text="Marcia Teresinha" textFill="#313131">
                     <font>
                         <Font name="System Bold" size="35.0" />
                     </font>
@@ -65,11 +65,11 @@
                         </columns>
                     </TableView>
                 </VBox>
-            <Label layoutX="29.0" layoutY="104.0" text="Nome:" textFill="#313131">
-               <font>
-                  <Font name="System Bold" size="10.0" />
-               </font>
-            </Label>
+                <Label layoutX="29.0" layoutY="104.0" text="Nome:" textFill="#313131">
+                    <font>
+                        <Font name="System Bold" size="10.0" />
+                    </font>
+                </Label>
 
             </children>
         </AnchorPane>
