--- a/Modulo1_Projeto/src/main/resources/view/main-view.fxml
+++ b/Modulo1_Projeto/src/main/resources/view/main-view.fxml
@@ -11,6 +11,7 @@
 
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.control.ProgressIndicator?>
 <BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.safescore.controller.MainController"
             stylesheets="@style.css">
@@ -42,7 +43,8 @@
 
                 <TextField fx:id="cpfField" alignment="CENTER_LEFT" promptText="000.000.000-00" styleClass="text-field" />
                 <Label fx:id="mensagemLabel" styleClass="mensagem-label" visible="false" text="" />
-                <Region prefHeight="120.0" />
+                <ProgressIndicator fx:id="loadingIndicator" visible="false" />
+                <Region prefHeight="60.0" />
                 <HBox alignment="CENTER" spacing="10.0">
                     <children>
                         <Button fx:id="limparButton" minWidth="150.0" onAction="#onLimparClicked" styleClass="button-clear" text="LIMPAR" textAlignment="CENTER" />
