--- a/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
+++ b/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
@@ -17,7 +17,7 @@
             <children>
 
                 <!-- Credit Score Pane -->
-                <Pane layoutX="360.0" layoutY="8.0" prefHeight="383.0" prefWidth="272.0" style="-fx-background-color: #3c5191; -fx-background-radius: 4%;">
+                <Pane layoutX="360.0" layoutY="6.0" prefHeight="383.0" prefWidth="272.0" style="-fx-background-color: #3c5191; -fx-background-radius: 4%;">
                     <children>
                         <Label fx:id="usuarioScore" layoutX="22.0" layoutY="55.0" prefHeight="140.0" prefWidth="231.0" style="-fx-background-color: #449432; -fx-background-radius: 4%; -fx-text-alignment: center; -fx-alignment: center;" text="681" textFill="WHITE">
                             <font>
@@ -31,31 +31,63 @@
                         </Label>
                         <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="183.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../img/sparkles.256x230.png" />
+                                <Image url="@../img/sparkles.png" />
                             </image>
                         </ImageView>
+                  <Label layoutX="51.0" layoutY="216.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="53.0" layoutY="317.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="53.0" layoutY="267.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" layoutX="14.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/correto.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="40.0" fitWidth="43.0" layoutX="8.0" layoutY="266.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/aviso.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="14.0" layoutY="324.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/excluir.png" />
+                     </image>
+                  </ImageView>
                     </children>
                 </Pane>
 
                 <!-- Logo -->
-                <ImageView fitHeight="227.0" fitWidth="223.0" layoutX="-6.0" layoutY="-63.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="92.0" fitWidth="241.0" layoutX="61.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../img/SafeScore-Logo.png" />
+                        <Image url="@../img/logo-safescore.png" />
                     </image>
                 </ImageView>
 
                 <!-- Personal Info Labels -->
-                <Label fx:id="usuarioNome" layoutX="27.0" layoutY="109.0" text="Marcia Teresinha" textFill="#313131">
+                <Label fx:id="usuarioNome" layoutX="29.0" layoutY="160.0" text="Marcia Teresinha" textFill="#313131">
                     <font>
-                        <Font name="System Bold" size="35.0" />
+                        <Font name="System Bold" size="28.0" />
                     </font>
                 </Label>
 
-                <VBox layoutX="16.0" layoutY="153.0" prefHeight="237.0" prefWidth="330.0">
+                <VBox layoutX="16.0" layoutY="204.0" prefHeight="185.0" prefWidth="330.0"
+                      stylesheets="@./profile-score.css">
                     <padding>
                         <Insets bottom="10" left="10" right="10" top="10" />
                     </padding>
-                    <TableView id="dadosTabela" fx:id="verificacoesTable" prefHeight="227.0" prefWidth="310.0">
+                    <TableView id="dadosTabela" fx:id="verificacoesTable" prefHeight="153.0" prefWidth="310.0"
+                               styleClass="tabela-moderna">
                         <columnResizePolicy>
                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                         </columnResizePolicy>
@@ -65,7 +97,8 @@
                         </columns>
                     </TableView>
                 </VBox>
-                <Label layoutX="29.0" layoutY="104.0" text="Nome:" textFill="#313131">
+
+                <Label layoutX="29.0" layoutY="145.0" text="Nome:" textFill="#313131">
                     <font>
                         <Font name="System Bold" size="10.0" />
                     </font>
