--- a/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
+++ b/Modulo1_Projeto/src/main/resources/view/profile-score.fxml
@@ -34,19 +34,19 @@
                                 <Image url="@../img/sparkles.png" />
                             </image>
                         </ImageView>
-                  <Label layoutX="51.0" layoutY="216.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
+                  <Label fx:id="pontoBom" layoutX="51.0" layoutY="216.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="53.0" layoutY="317.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
+                  <Label fx:id="pontoMedio" layoutX="53.0" layoutY="317.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="53.0" layoutY="267.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
+                  <Label fx:id="pontoRuin" layoutX="53.0" layoutY="267.0" prefHeight="40.0" prefWidth="247.0" text="Ponto Bom" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
                   <ImageView fitHeight="27.0" fitWidth="31.0" layoutX="14.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
@@ -81,13 +81,11 @@
                     </font>
                 </Label>
 
-                <VBox layoutX="16.0" layoutY="204.0" prefHeight="185.0" prefWidth="330.0"
-                      stylesheets="@./profile-score.css">
+                <VBox layoutX="16.0" layoutY="204.0" prefHeight="185.0" prefWidth="330.0" stylesheets="@./profile-score.css">
                     <padding>
                         <Insets bottom="10" left="10" right="10" top="10" />
                     </padding>
-                    <TableView id="dadosTabela" fx:id="verificacoesTable" prefHeight="153.0" prefWidth="310.0"
-                               styleClass="tabela-moderna">
+                    <TableView id="dadosTabela" fx:id="verificacoesTable" prefHeight="153.0" prefWidth="310.0" styleClass="tabela-moderna">
                         <columnResizePolicy>
                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                         </columnResizePolicy>
